# Liminal

./: .gitignore  HUMAN-SHAPED-LOOP.md  HUMAN-SHAPED-LOOP.zh-CN.md  MANIFEST.in  README.md  README.zh-CN.md  orchestrator.py  pyproject.toml  spec.md
.github/workflows/: ci.yml  real-provider-e2e.yml  (+1 more)
desgin/: codex-integration-research.md  development-plan.md  liminal-design.md
design/: README.md  contracts.md  evolution.md
docs/: human-shaped-loop.md  human-shaped-loop.zh-CN.md
handoff/: project_status_review.md  task.json  tester_output.json  verifier_verdict.json
liminal/: cli.py  db.py  executor.py  recovery.py  service.py  settings.py  specs.py  stagnation.py  utils.py  web.py
orchestrator/: agent_views.py  engine.py  io_contracts.py  retry_policy.py  session_manager.py  stagnation.py
planning/: README.md  evolution.md
scripts/: replay_demo.sh
spec/: acceptance_criteria.json  constraints.md  test_cases.json
state/: iteration_log.jsonl  metrics_history.jsonl  run_events.jsonl  stagnation.json
tests/: README.md  conftest.py  run_l3_parallel.py  test_agent_adapters.py  test_alignment.py  test_alignment_guidance.py  test_alignment_semantics.py  test_asset_catalog.py  test_bundles.py  test_cli.py  test_db.py  test_diagnostics.py  test_e2e_browser.py  test_evidence_coverage.py  test_evidence_gate.py  test_evidence_manifest.py  test_executor.py  test_executor_process_stream.py  test_l3_agent_phase_report.py  test_l3_parallel_runner.py  test_l3_phase_reports.py  test_locale_detection.py  test_providers.py  test_real_agent_adapter_e2e.py  test_real_cli_integration.py  test_real_search_loop_examples.py  test_real_search_loop_fixtures.py  test_recovery.py  test_release_web_e2e.py  test_run_artifacts.py  test_runner.py  test_schemas.py  test_service_workflow_support.py  test_settings.py  test_skills.py  test_specs.py  test_system_dialogs.py  test_task_verdicts.py  test_web.py  test_web_pages.py  (+1 more)
workspace/: scratch.md
(+509 files in other folders)
