[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loopora"
version = "0.1.0"
description = "CLI-first Codex orchestration with a local web console."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "markdown>=3.6",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "playwright>=1.55.0",
  "pytest>=8.3.0",
]

[project.scripts]
loopora = "loopora.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["loopora*"]

[tool.setuptools.package-data]
loopora = [
  "templates/*.html",
  "static/*.css",
  "static/*.js",
  "static/pages/*.js",
  "assets/logo/*.svg",
  "assets/prompts/*.md",
  "skills/assets/*/SKILL.md",
  "skills/assets/*/references/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "real_cli: opt-in integration coverage that uses the real Codex CLI and a realistic workspace fixture",
]

[tool.uv]
package = true
